# Replace-Your-Human-with-AI-Skill

./: .env.example  .gitignore  AGENTS.md  INSFORGE_SETUP.md  README.md  insforge_schema.sql  pyproject.toml
desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: ChunkSummaryList.tsx  Dashboard.tsx  FinalWorkflowPanel.tsx  PipelineProgress.tsx  PrivacyPanel.tsx  RecordingControls.tsx  SettingsPanel.tsx  StatusBadge.tsx
desktop/src/lib/: config.ts  jsonlParser.ts  recorderProcess.ts
migrations/: 20260606224456_create-tracker-tables.sql  20260607002600_add_workflow_sync_metadata.sql
src/tracker/: agent.py  app_context.py  chunker.py  cli.py  config.py  events.py  jsonl.py  ocr.py  privacy.py  pseudocode.py  recorder.py  screenshot.py  suggestions.py  sync.py
src/tracker/llm/: __init__.py  base.py  gemini_vertex.py  mock.py
src/tracker/skills/: SKILL.md
src/tracker/storage/: __init__.py  insforge_client.py  local_sqlite.py  repository.py
src/tracker/summarization/: __init__.py  chunk_summary.py  final_pseudocode.py
src/tracker/workflows/: __init__.py  agent_handoff.py  automation_score.py  (+3 more)
tests/: test_app_context.py  test_chunker.py  test_events.py  test_insforge_payloads.py  test_llm_pipeline.py  test_local_storage.py  test_pseudocode.py  test_recorder_pipeline.py  test_suggestions.py  test_workflows.py
(+3 files in other folders)
