[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-usage-tracker"
version = "0.1.0"
description = "Local-first prototype to track desktop usage and summarize workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Prototype Maintainers" }
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "pynput>=1.7.6",
  "mss>=9.0.1",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
  "psutil>=5.9.0",
  "pygetwindow>=0.0.9"
]

[project.optional-dependencies]
llm = [
  "openai>=1.30.0",
  "ollama>=0.2.0"
]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
tracker = "tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
